@@ -29,6 +29,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #15064: Implement context manager protocol for multiprocessing types
+
 - Issue #15101: Make pool finalizer avoid joining current thread.
 
 - Issue #14657: The frozen instance of importlib used for bootstrap is now
